.env updated minor spell fix added joi support for validation middleware updated readme login/ register fix API with payload added open and auth routes

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
-NODE_ENV = development
-DEV_DB_USER = root
-DEV_DB_PASSWORD = 
-DEV_DB_NAME = node_sequelize_starter
+NODE_ENV=DEV
+DEV_DB_USER=root
+DEV_DB_PASSWORD= 
+DEV_DB_NAME=node_sequelize_starter
+DEV_TOKEN_KEY=node_sequelize_starter
+DEV_SMTP_EMAILADDRESS=
+DEV_SMTP_PASS=
