--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "node-sequelize-starter",
   "version": "1.0.0",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "cross-env NODE_ENV=DEV node ./bin/www",
+    "run-migration-local": "cross-env NODE_ENV=DEV npx sequelize-cli db:migrate"
   },
   "dependencies": {
     "aws-sdk": "^2.720.0",
@@ -14,6 +15,7 @@
     "express": "~4.17.1",
     "express-rate-limit": "^5.1.3",
     "http-errors": "~1.7.3",
+    "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.10",
     "morgan": "~1.10.0",
