--- a/package.json
+++ b/package.json
@@ -6,28 +6,28 @@
     "run-migration-local": "cross-env NODE_ENV=DEV npx sequelize-cli db:migrate"
   },
   "dependencies": {
-    "aws-sdk": "^2.720.0",
-    "clean-css": "^4.1.11",
-    "cookie-parser": "~1.4.4",
+    "aws-sdk": "^2.858.0",
+    "clean-css": "^5.1.1",
+    "cookie-parser": "~1.4.5",
     "crypto-js": "^4.0.0",
-    "debug": "~4.1.1",
+    "debug": "~4.3.1",
     "dotenv": "^8.2.0",
     "express": "~4.17.1",
-    "express-rate-limit": "^5.1.3",
-    "http-errors": "~1.7.3",
+    "express-rate-limit": "^5.2.6",
+    "http-errors": "~1.8.0",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.10",
+    "mongoose": "^5.11.19",
     "morgan": "~1.10.0",
     "mysql": "^2.18.1",
-    "mysql2": "^2.1.0",
-    "nodemailer": "^6.4.6",
-    "pug": "2.0.0-beta11",
+    "mysql2": "^2.2.5",
+    "nodemailer": "^6.5.0",
+    "pug": "3.0.2",
     "randomstring": "^1.1.5",
     "request-promise": "^4.2.5",
-    "sequelize": "^6.3.3",
-    "swagger-ui-express": "^4.1.4",
-    "validator": "^13.0.0",
+    "sequelize": "^6.5.0",
+    "swagger-ui-express": "^4.1.6",
+    "validator": "^13.5.2",
     "winston": "^3.3.3"
   },
   "devDependencies": {
